@@ -34,6 +34,7 @@
 #include <QString>
 #include <QMap>
 #include <QList>
+#include <QSet>
 
 #include "nodebase.h"
 #include "logging.h"
@@ -42,6 +43,11 @@
 #include "genericdata.h"
 #include "orientationdata.h"
 
+/**
+ * Base class for sensor type specific nodes. This is used as base class
+ * for chains and graph endpoint nodes which are responsible of streaming
+ * data to the sessions.
+ */
 class AbstractSensorChannel : public NodeBase
 {
     Q_OBJECT
@@ -57,97 +63,189 @@ public:
      */
     virtual ~AbstractSensorChannel() {}
 
-    SensorError errorCode() const { return errorCode_; }
-    QString errorString() const { return errorString_; }
+    /**
+     * Last occured error.
+     *
+     * @return last occured error.
+     */
+    SensorError errorCode() const;
 
-    /** Type of the sensor channel */
-    const QString type() const { return metaObject()->className(); }
+    /**
+     * Description of last occured error.
+     *
+     * @return description of last occured error.
+     */
+    const QString& errorString() const;
 
-    /** Whether sensor is running or not */
-    bool running() { return (cnt_ > 0); }
+    /**
+     * Class name of the sensor channel.
+     *
+     * @return Class name of sensor channel.
+     */
+    const QString type() const;
 
+    /**
+     * Is sensor running or not. Sensor is running if there are any
+     * open sessions for it.
+     *
+     * @return is sensor running.
+     */
+    bool running() const;
+
+    /**
+     * Enable or disable downsampling for given session.
+     *
+     * @param sessionId session ID.
+     * @param value downsampling state.
+     */
     void setDownsamplingEnabled(int sessionId, bool value);
-    bool downsamplingEnabled(int sessionId);
+
+    /**
+     * Is downsampling enabled for given session.
+     *
+     * @param sessionId session ID.
+     * @return is downsampling enabled.
+     */
+    bool downsamplingEnabled(int sessionId) const;
+
+    /**
+     * Is downsampling supported for this object.
+     *
+     * @return is downsampling supported.
+     */
     virtual bool downsamplingSupported() const;
 
     virtual void removeSession(int sessionId);
 
-public Q_SLOTS:
     /**
-     * @brief Start data flow.
-     *
-     * This base class implementation is responsible for reference counting.
-     * Each child implementation should call the base class method, and verify
-     * the return value.
-     *
-     * Child class implementation is responsible for starting the sensor
+     * Start data flow. Base class implementation is responsible for
+     * reference counting. Which each subclass is responsible of calling.
+     * Subclass implementation is responsible for starting the sensor
      * data flow depending on output from the base class method.
      *
      * @return <b>Base class:</b> \c True when start action should be taken,
      *         \c False if not (i.e already running).<br/>
-     *         <b>Child class:</b> \c True on successfull start or already
+     *         <b>Child class:</b> \c True on successful start or already
      *         running, \c False on error.
      */
     virtual bool start();
+
+    /**
+     * Start data flow for given session.
+     *
+     * @param sessionId session ID.
+     * @return True if sensor was started. False if it is already running.
+     */
     bool start(int sessionId);
 
     /**
-     * @brief Stop data flow.
-     *
-     * This base class implementation is responsible for reference counting.
-     * Each child implementation should call the base class method, and verify
-     * the return value.
-     *
-     * Child class implementation is responsible for stopping the sensor
-     * data flow depending on output from the base calss method.
+     * Stop data flow. Base class implementation is responsible for
+     * reference counting. Subclass implementation is responsible of
+     * stopping the sensor data flow depending on output from the base class
+     * method.
      *
      * @return <b>Base class:</b>\c True when start action should be taken,
      *         \c False if not (i.e. Already stopped, or other listeners present).<br/>
      *         <b>Child class:</b>\c True when succesfull, \c False on error.
      */
     virtual bool stop();
+
+    /**
+     * Stop data flow for given session.
+     *
+     * @param sessionId session ID.
+     * @return True if sensor was stopped. False if it is already stopped.
+     */
     bool stop(int sessionId);
 
 Q_SIGNALS:
+    /**
+     * Signal is emitted for occured errors.
+     *
+     * @param error Error number.
+     */
     void errorSignal(int error);
 
 protected:
+    /**
+     * Constructor.
+     *
+     * @param id Sensor ID.
+     */
     AbstractSensorChannel(const QString& id);
 
+    /**
+     * Set error information.
+     *
+     * @param errorCode error code.
+     * @param errorString error description.
+     */
     void setError(SensorError errorCode, const QString& errorString);
-    void clearError() { errorCode_ = SNoError; errorString_.clear(); }
 
+    /**
+     * Clear error information.
+     */
+    void clearError();
+
+    /**
+     * Write output data to all connected sessions.
+     *
+     * @param source Object to write.
+     * @param size Size of the object.
+     * @return was data succesfully written.
+     */
     bool writeToClients(const void* source, int size);
 
+    /** Sample buffer type for TimedXyzData downsampling. */
     typedef QMap<int, QList<TimedXyzData> > TimedXyzDownsampleBuffer;
+
+    /** Sample buffer type for CalibratedMagneticFieldData downsampling. */
     typedef QMap<int, QList<CalibratedMagneticFieldData> > MagneticFieldDownsampleBuffer;
 
+    /**
+     * Downsample and propagate data to all connected sessions.
+     *
+     * @param data Object to handle.
+     * @param buffer Data buffer.
+     * @return was data succesfully handled.
+     */
     bool downsampleAndPropagate(const TimedXyzData& data, TimedXyzDownsampleBuffer& buffer);
 
+    /**
+     * Downsample and propagate data to all connected sessions.
+     *
+     * @param data Object to handle.
+     * @param buffer Data buffer.
+     * @return was data succesfully handled.
+     */
     bool downsampleAndPropagate(const CalibratedMagneticFieldData& data, MagneticFieldDownsampleBuffer& buffer);
 
-    void signalPropertyChanged(const QString& name)
-    {
-        emit propertyChanged(name);
-    }
+    /**
+     * Signal property change.
+     */
+    void signalPropertyChanged(const QString& name);
 
 private:
-    QString             name_;
+    SensorError         errorCode_;       /**< previous occured error code */
+    QString             errorString_;     /**< previous occured error description */
+    int                 cnt_;             /**< usage reference count */
+    QSet<int>           activeSessions_;  /**< active sessions */
+    QMap<int, bool>     downsampling_;    /**< downsample state for sessions */
 
-    SensorError         errorCode_;
-    QString             errorString_;
-
-    int                 cnt_;
-
-    QList<int>          activeSessions_;
-
-    QList<DataRange>    intervalList_;
-
-    QMap<int, bool>     downsampling_;
-
+    /**
+     * Write to given session.
+     *
+     * @param sessionId session ID.
+     * @param source source object.
+     * @param size size of object to write.
+     * @return was data succesfully written.
+     */
     bool writeToSession(int sessionId, const void* source, int size);
 };
 
+/**
+ * Factory type for constructing sensor channel.
+ */
 typedef AbstractSensorChannel* (*SensorChannelFactoryMethod)(const QString& id);
 
 #endif // ABSTRACTSENSOR_H
